--- a/ui/src/components/common/buttons/ButtonXLarge/ButtonXLarge.module.css
+++ b/ui/src/components/common/buttons/ButtonXLarge/ButtonXLarge.module.css
@@ -1,7 +1,7 @@
 .ButtonXLarge {
   --button-border-radius: 5px;
-  --button-orange: #a53a01;
-  --button-green: #0c501c;
+  --button-orange: #d3ab0b;
+  --button-green: #3dbf9f;
   --button-font-weight: 600;
   --button-font-size: 15px;
   --button-line-height: 21px;
